# robotica2023AN

./: .gitignore  .gitmodules  README.md  differentialKin.cpp  path_finding.h  plot3d.py  run.sh  test.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/vision/: custMsg.h
devel/lib/control/: assignment1  control_node  cust_msg  cust_pub
devel/lib/pkgconfig/: control.pc  vision.pc
devel/lib/python3/dist-packages/vision/msg/: __init__.py  _custMsg.py
devel/share/common-lisp/ros/vision/msg/: _package.lisp  _package_custMsg.lisp  custMsg.lisp  vision-msg.asd
devel/share/control/cmake/: controlConfig.cmake
devel/share/gennodejs/ros/vision/msg/: _index.js  custMsg.js
devel/share/roseus/ros/vision/: manifest.l
devel/share/roseus/ros/vision/msg/: custMsg.l
devel/share/vision/cmake/: vision-msg-extras.cmake  vision-msg-paths.cmake  visionConfig.cmake
models/X1-Y1-Z2/: model.config  model.sdf
models/X1-Y2-Z1/: model.sdf
models/X1-Y2-Z2/: model.config  model.sdf
models/X1-Y2-Z2-CHAMFER/: model.sdf
models/X1-Y2-Z2-TWINFILLET/: model.config  model.sdf
models/X1-Y3-Z2/: model.sdf
models/X1-Y3-Z2-FILLET/: model.sdf
models/X1-Y4-Z1/: model.config  model.sdf
models/X1-Y4-Z2/: model.sdf
models/X2-Y2-Z2/: model.config  model.sdf
models/X2-Y2-Z2-FILLET/: model.sdf
src/control/: CMakeLists.txt  package.xml
src/control/include/: custom_joint_publisher.h  path_finding.h
src/control/src/: assignment1.cpp  assignment1_diffKin.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  cust_msg.cpp  cust_pub.cpp  diffKinLibrary.cpp  differentialKin.cpp  difftest.cpp  inverseKin.cpp  path_finding.cpp  test.cpp
src/control/src/eigen-git-mirror/doc/snippets/: tut_arithmetic_transpose_aliasing.cpp
src/datasetCreation/createDataset/: boxes.json  imgGen_new.py
src/datasetCreation/createDataset/dataset_new/labels/: 12678.txt  12679.txt  12680.txt  12681.txt  12682.txt  12683.txt  12684.txt  12685.txt  12686.txt  12687.txt  12688.txt  12689.txt  12690.txt  12691.txt  12692.txt  12693.txt  12694.txt  12695.txt  12696.txt  12697.txt  12698.txt  12699.txt  12700.txt  12701.txt  12702.txt  12703.txt
src/datasetCreation/yolov8/: .gitignore  config.yaml  data.yaml  test.py  train.py
src/vision/: CMakeLists.txt  package.xml
src/vision/msg/: custMsg.msg
src/vision/src/: visionNode.py
src/vision/src/templates/: alto00  alto01  alto02  alto03  alto04  alto05  alto06  alto07  alto08  alto09  alto10  alto11  alto12  alto13  alto14  alto15  alto16  alto17  basso00  basso01  basso02  basso03  basso04  basso05  basso06  basso07  basso08  basso09  basso10  basso11  basso12  basso13  basso14  basso15  basso16  basso17  laterale00  laterale01  laterale02  laterale03  (+14 more)
src/vision_old/: diobonocimetterounsacco.txt
src/vision_old/createDataset/: boxes.json  getImages.py  getImagesStepo.py  imageGenerator.py  image_to_world.py  imgGen_new.py
src/vision_old/createDataset/dataset/labels/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+710 more)
src/vision_old/provaTemplateMatching/: templateMatching.py
src/vision_old/yolov8/: data.yaml  test.py
src/vision_old/yolov8/datasets/coco128/train/: labels.cache
src/vision_old/yolov8/datasets/coco128/validation/: labels.cache
src/vision_old/yolov8/runs/detect/train/: args.yaml  events.out.tfevents.1675937498.docker.449.0
src/vision_old/yolov8/runs/detect/train10/: args.yaml  events.out.tfevents.1676211093.archBTW.12463.0  results.csv
src/vision_old/yolov8/runs/detect/train11/: args.yaml  events.out.tfevents.1676213502.archBTW.19857.0  results.csv
src/vision_old/yolov8/runs/detect/train2/: args.yaml  events.out.tfevents.1675937896.docker.538.0
src/vision_old/yolov8/runs/detect/train3/: args.yaml  events.out.tfevents.1675938013.docker.596.0
src/vision_old/yolov8/runs/detect/train4/: args.yaml  events.out.tfevents.1675938262.archBTW.1905.0  results.csv
src/vision_old/yolov8/runs/detect/train5/: args.yaml  events.out.tfevents.1675939001.archBTW.4519.0
src/vision_old/yolov8/runs/detect/train6/: args.yaml  events.out.tfevents.1675957326.archBTW.4187.0  results.csv
src/vision_old/yolov8/runs/detect/train7/: args.yaml  events.out.tfevents.1676055414.archBTW.9115.0
src/vision_old/yolov8/runs/detect/train8/: args.yaml  events.out.tfevents.1676111189.archBTW.8068.0  results.csv
src/vision_old/yolov8/runs/detect/train9/: args.yaml  events.out.tfevents.1676210696.archBTW.11088.0
worlds/: assignment1.world  assignment2.world  assignment3.world  assignment4.world  tavolo.world
worlds/models/Placeholders/X1-Y1-Z2/: model.sdf
worlds/models/Placeholders/X1-Y2-Z1/: model.sdf
worlds/models/Placeholders/X1-Y2-Z2/: model.sdf
worlds/models/Placeholders/X1-Y2-Z2-CHAMFER/: model.config  model.sdf
worlds/models/Placeholders/X1-Y2-Z2-TWINFILLET/: model.sdf
worlds/models/Placeholders/X1-Y3-Z2/: model.sdf
worlds/models/Placeholders/X1-Y3-Z2-FILLET/: model.sdf
worlds/models/Placeholders/X1-Y4-Z1/: model.sdf
worlds/models/Placeholders/X1-Y4-Z2/: model.sdf
worlds/models/Placeholders/X2-Y2-Z2/: model.sdf
worlds/models/Placeholders/X2-Y2-Z2-FILLET/: model.sdf
worlds/models/X1-Y1-Z2/: model.sdf
worlds/models/X1-Y2-Z1/: model.config  model.sdf
worlds/models/X1-Y2-Z2/: model.sdf
worlds/models/X1-Y2-Z2-CHAMFER/: model.sdf
worlds/models/X1-Y2-Z2-TWINFILLET/: model.sdf
worlds/models/X1-Y3-Z2/: model.config  model.sdf
worlds/models/X1-Y3-Z2-FILLET/: model.config  model.sdf
worlds/models/X1-Y4-Z1/: model.sdf
worlds/models/X1-Y4-Z2/: model.config  model.sdf
worlds/models/X2-Y2-Z2/: model.sdf
worlds/models/X2-Y2-Z2-FILLET/: model.config  model.sdf
worlds/models/tavolo/: model.sdf
worlds/worlds/: assignment1.world  assignment2.world  assignment3.world
(+1013 files in other folders)
